@@ -1,5 +1,5 @@
-<ul class="sidebar-list">
-  <div class="sidebar-logo">
+<ul class="sidebar__list">
+  <div class="sidebar__logo">
     <%= image_tag "logo.svg" %>
   </div>
 
@@ -8,7 +8,7 @@
       <%= link_to(
         resource.to_s.titleize,
         [Administrate::NAMESPACE, resource],
-        class: link_class(resource)
+        class: "sidebar__link sidebar__link--#{nav_link_state(resource)}"
       ) %>
     </li>
   <% end %>
